--- a/client.html
+++ b/client.html
@@ -43,9 +43,9 @@
     .center-panel {
       flex: 1;
       padding: 20px;
-      overflow: auto;
+      overflow: hidden;
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       justify-content: center;
       background: #e5e5e5;
     }
@@ -54,6 +54,7 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.15);
       border-radius: 4px;
       overflow: hidden;
+      transform-origin: center center;
     }
     .preview-container.empty {
       display: flex;
@@ -456,11 +457,48 @@
       setTimeout(() => {
         const container = doc.querySelector('.scene-container');
         if (container) {
-          iframe.style.width = container.offsetWidth + 'px';
-          iframe.style.height = container.offsetHeight + 'px';
+          const sceneWidth = container.offsetWidth;
+          const sceneHeight = container.offsetHeight;
+
+          iframe.style.width = sceneWidth + 'px';
+          iframe.style.height = sceneHeight + 'px';
+
+          // Scale to fit window height
+          const centerPanel = document.querySelector('.center-panel');
+          const availableHeight = centerPanel.clientHeight - 40; // 40px for padding
+          const availableWidth = centerPanel.clientWidth - 40;
+
+          const scaleY = availableHeight / sceneHeight;
+          const scaleX = availableWidth / sceneWidth;
+          const scale = Math.min(scaleX, scaleY, 1); // Don't scale up, only down
+
+          previewContainer.style.transform = `scale(${scale})`;
         }
       }, 100);
     }
+
+    // Re-scale preview on window resize
+    window.addEventListener('resize', () => {
+      const iframe = document.getElementById('previewFrame');
+      if (iframe) {
+        const doc = iframe.contentDocument || iframe.contentWindow.document;
+        const container = doc.querySelector('.scene-container');
+        if (container) {
+          const sceneWidth = container.offsetWidth;
+          const sceneHeight = container.offsetHeight;
+
+          const centerPanel = document.querySelector('.center-panel');
+          const availableHeight = centerPanel.clientHeight - 40;
+          const availableWidth = centerPanel.clientWidth - 40;
+
+          const scaleY = availableHeight / sceneHeight;
+          const scaleX = availableWidth / sceneWidth;
+          const scale = Math.min(scaleX, scaleY, 1);
+
+          previewContainer.style.transform = `scale(${scale})`;
+        }
+      }
+    });
 
     function updateComponentDisplay(type, data, filename) {
       const dropZone = componentDropZones[type];
